e2e/tests/snapshots/node_test____test_context_wrapped_should_show_node_version.snap
---
source: e2e/tests/node_test.rs
expression: res
---
id: 1
is: snm node list --compact


stdout:😿 Local node list is empty
stderr:
status:0


id: 2
is: node -v


stdout:v20.0.0
stderr:
status:0
