e2e/tests/snapshots/node_test____test_context_wrapped_test_auto_install_node_with_node_version.snap
---
source: e2e/tests/node_test.rs
expression: res
---
id: 1
is: node -v


stdout:v20.0.0
stderr:
status:0
