e2e/tests/snapshots/node_test____test_context_wrapped_test_invalid_node_version.snap
---
source: e2e/tests/node_test.rs
expression: res
---
id: 1
is: node -v


stdout:
stderr:Error: Not found node: node@100.0.0, please check your node version
status:1
