e2e/tests/snapshots/node_test____test_context_wrapped_test_local_node_list_is_empty.snap
---
source: e2e/tests/node_test.rs
expression: res
---
id: 1
is: snm node list --compact


stdout:😿 Local node list is empty
stderr:
status:exit status: 0
