e2e/tests/snapshots/node_test____test_context_wrapped_test_no_strict_and_no_default_node.snap
---
source: e2e/tests/node_test.rs
expression: res
---
id: 1
is: node -v


stdout:
stderr:Error: No default Node.js version found
status:1
