e2e/tests/snapshots/node_test____test_context_wrapped_test_show_node_version_with_strict_mode.snap
---
source: e2e/tests/node_test.rs
expression: res
---
id: 1
is: node -v


stdout:
stderr:Error: In strict mode, a .node-version file must be configured in the current directory.
